testsuite/tests/parser/should_compile/p011.alan
paren() : proc
  foo : int;
{
  foo = (1+3) * 4 + (4/8);
}
