testsuite/tests/parser/should_fail/pfail032.alan
hello() : proc
{
  hello(;
  foo = 3;
}
